--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -1,15 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Book List</title>
-</head>
-<body>
-    <h1>My books</h1>
-    <div>
-        <table>
+  </head>
+  <body>
+    
+    <div class="container">
+        <h1>My books</h1>
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>ID</th>
@@ -20,11 +25,11 @@
             <tbody>
                 <tr th:each="book : ${books}">
                     <td th:text="${book.id}">1</td>
-                    <td th::text=${book.title}>Titolo 1</td>
+                    <td th:text="${book.title}">Titolo 1</td>
                     <td th:text="${book.author}">Carlo</td>
                     <td>
                         <form th:action="@{/deleteBook/{id}(id=${book.id})}" method="post">
-                            <button type="submit">Delete</button>
+                            <button class="btn btn-danger" type="submit">Delete</button>
                         </form>
                     </td>
                 </tr>
@@ -32,17 +37,29 @@
         </table>
     </div>
 
-    <div>
+    <div class="container">
         <h1>Add new book:</h1>
         <form action="/addbook" method="post">
-            <div>
-                <input placeholder="Title" type="text" id="inputTitle" name="title">
+            <div class="mb-3">
+                <input class="form-control" placeholder="Title" type="text" id="inputTitle" name="title">
             </div>
-            <div>
-                <input placeholder="Author" type="text" id="InputAuthor" name="author">
+            <div class="mb-3">
+                <input class="form-control" placeholder="Author" type="text" id="InputAuthor" name="author">
             </div>
-            <button type="submit">Save</button>
+            <button class="btn btn-success" type="submit">Save</button>
         </form>
     </div>
-</body>
+    
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
